feat: Enhance acceptance test with toggle and screenshots
Improve acceptance job to actually exercise the toggle functionality
and capture visual evidence:

- Add wait-for-cli step to acceptance job (was missing)
- Call toggle() function to hide menubar and capture screenshot
- Call toggle() again to show menubar and capture screenshot
- Add screenshots to GitHub step summary for visual verification

--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -56,8 +56,37 @@ jobs:
           unzip ToggleMenubar.spoon.zip -d ~/.hammerspoon/Spoons/
       - id: start-hammerspoon
         run: open /Applications/Hammerspoon.app && sleep 5
+      - id: wait-for-cli
+        run: |
+          for i in {1..30}; do
+            if command -v hs &> /dev/null; then
+              echo "CLI ready"
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "CLI installation timeout"
+          exit 1
       - id: test-spoon-load
         run: hs -c "hs.loadSpoon('ToggleMenubar'); print(spoon.ToggleMenubar ~= nil and 'SUCCESS' or 'FAILED')" | grep SUCCESS
+      - id: test-toggle-function
+        run: |
+          mkdir -p screenshots
+          hs -c "hs.loadSpoon('ToggleMenubar'); spoon.ToggleMenubar:toggle()" && sleep 1
+          screencapture -x screenshots/menubar-hidden.png
+          hs -c "spoon.ToggleMenubar:toggle()" && sleep 1
+          screencapture -x screenshots/menubar-visible.png
+          echo "## Acceptance Test Screenshots" >> $GITHUB_STEP_SUMMARY
+          echo "### Menubar Hidden" >> $GITHUB_STEP_SUMMARY
+          echo "![Menubar Hidden](screenshots/menubar-hidden.png)" >> $GITHUB_STEP_SUMMARY
+          echo "### Menubar Visible" >> $GITHUB_STEP_SUMMARY
+          echo "![Menubar Visible](screenshots/menubar-visible.png)" >> $GITHUB_STEP_SUMMARY
+      - id: upload-screenshots
+        uses: actions/upload-artifact@v5
+        with:
+          name: acceptance-screenshots
+          path: screenshots/
+          retention-days: 7
 
   release:
     needs: [acceptance]
