--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -56,7 +56,8 @@ jobs:
           unzip ToggleMenubar.spoon.zip -d ~/.hammerspoon/Spoons/
       - id: grant-accessibility-permissions
         run: |
-          sudo sqlite3 /Library/Application\ Support/com.apple.TCC/TCC.db "INSERT OR REPLACE INTO access VALUES('kTCCServiceAccessibility','org.hammerspoon.Hammerspoon',0,2,3,1,NULL,NULL,NULL,'UNUSED',NULL,0,1687450000);"
+          sqlite3 ~/Library/Application\ Support/com.apple.TCC/TCC.db "INSERT OR REPLACE INTO access VALUES('kTCCServiceAccessibility','org.hammerspoon.Hammerspoon',0,2,4,1,NULL,NULL,0,'UNUSED',NULL,0,1687450000);"
+          sleep 2
       - id: start-hammerspoon
         run: open /Applications/Hammerspoon.app && sleep 5
       - id: test-spoon-load
@@ -64,9 +65,9 @@ jobs:
       - id: test-toggle-function
         run: |
           mkdir -p screenshots
-          hs -c "hs.loadSpoon('ToggleMenubar'); spoon.ToggleMenubar:toggle()" && sleep 1
+          hs -c "spoon.ToggleMenubar:toggle()" && sleep 1
           screencapture -x screenshots/menubar-hidden.png
-          hs -c "hs.loadSpoon('ToggleMenubar'); spoon.ToggleMenubar:toggle()" && sleep 1
+          hs -c "spoon.ToggleMenubar:toggle()" && sleep 1
           screencapture -x screenshots/menubar-visible.png
       - id: upload-screenshots
         uses: actions/upload-artifact@v5
