tests: Add OCR-based acceptance test
Add end-to-end acceptance test that uses tesseract OCR to verify
menubar visibility changes when toggling.

The test captures screenshots of the menubar region and uses OCR to
detect the presence of menubar text (Finder, File, Edit, View) to
determine visibility state. This provides automated verification that
the toggle functionality works correctly in a real macOS environment.

The test captures a 1000x30 pixel region at the top of the screen,
which is more efficient and reliable than full-screen OCR. Screenshots
are automatically saved in `.tmp` and uploaded as artifacts on CI test
runs.

Requirements:
- tesseract OCR installed (brew install tesseract)
- Hammerspoon running with ToggleMenubar spoon loaded

--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -43,6 +43,7 @@ jobs:
     needs: [commit]
     runs-on: macos-latest
     steps:
+      - uses: actions/checkout@v5
       - uses: actions/download-artifact@v5
         with:
           name: release-candidate
@@ -68,19 +69,15 @@ jobs:
           sleep 5
       - id: test-spoon-load
         run: hs -c "hs.loadSpoon('ToggleMenubar'); print(spoon.ToggleMenubar ~= nil and 'SUCCESS' or 'FAILED')" | grep SUCCESS
-      - id: test-toggle-function
+      - id: acceptance-test
         run: |
-          mkdir -p screenshots
-          screencapture -x screenshots/before.png
-          hs -c "spoon.ToggleMenubar:toggle()" && sleep 2
-          screencapture -x screenshots/menubar-hidden.png
-          hs -c "spoon.ToggleMenubar:toggle()" && sleep 2
-          screencapture -x screenshots/menubar-visible.png
+          brew install tesseract
+          make acceptance-test
       - id: upload-screenshots
         uses: actions/upload-artifact@v5
         with:
           name: acceptance-screenshots
-          path: screenshots/
+          path: .tmp/screenshots/
 
   release:
     needs: [acceptance]
